<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/record_title"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wins_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_1x"
        android:text="@string/total_wins"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/wins_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wins_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:text="37" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/losses_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_1x"
        android:text="@string/total_losses"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/losses_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wins_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/losses_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wins_label"
        tools:text="73" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_games_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_1x"
        android:text="@string/total_games"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/total_games_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/losses_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_games_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/losses_label"
        tools:text="110" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_resets_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_1x"
        android:text="@string/total_resets"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/total_resets_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_games_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_resets_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_games_label"
        tools:text="24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_record_button"
        style="@style/Button.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4x"
        android:layout_marginTop="@dimen/margin_4x"
        android:layout_marginEnd="@dimen/margin_4x"
        android:text="@string/reset_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_resets_label" />

</androidx.constraintlayout.widget.ConstraintLayout>